contracts/gear-lib-ng/tests/derive/2-no-fields.rs
use gear_lib::StorageProvider;

struct Storage;

#[derive(StorageProvider)]
struct Contract {
    storage: Storage,
}

fn main() {}
